objects/n2de__cls_Territory__c.object
<CustomObject>
    <fields>
        <fullName>n2de__Active_name__c</fullName>
        <label>Active name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Color__c</fullName>
        <label>Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Default_zoom__c</fullName>
        <label>Default zoom</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Execution_order__c</fullName>
        <label>Execution order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>n2de__Items_json__c</fullName>
        <label>Items json</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>n2de__Number_of_items__c</fullName>
        <label>Number of items</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>n2de__Shape__c</fullName>
        <label>Shape</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>n2de__cls_Territory_map__c</fullName>
        <label>Territory map</label>
        <referenceTo>n2de__cls_Territory_map__c</referenceTo>
        <relationshipLabel>Territories</relationshipLabel>
        <relationshipName>Territories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Classifier territory</label>
    <nameField>
        <label>Territory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Classifier territories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>